Fix scroll and change button * Horizontal scrolling fix: animation optimization, positioning fix before animation starts, cropping off-screen content
* Change button for start screen

--- a/src/widgets/ServicesScreen/ui/ServicesList/ServicesList.module.scss
+++ b/src/widgets/ServicesScreen/ui/ServicesList/ServicesList.module.scss
@@ -4,6 +4,7 @@
   @include mixin.flex-wrap;
   justify-content: center;
   @include mixin.adaptive("gap", 30, 20);
+  clip-path: inset(0);
 
   @include mixin.laptop {
     @include mixin.flex-row;
