--- a/src/widgets/StartScreen/ui/StartScreen/StartScreen.module.scss
+++ b/src/widgets/StartScreen/ui/StartScreen/StartScreen.module.scss
@@ -40,28 +40,6 @@
             @include mixin.flex-column;
             @include mixin.adaptive("gap", 20, 10);
         }
-
-        .guarantees__wrapper {
-            @include mixin.flex-column;
-            gap: 10px;
-        }
-
-        .guarantees__list {
-            @include mixin.flex-column;
-            gap: 7px;
-        }
-
-        .guarantees__item {
-            @include mixin.flex-row;
-            gap: 5px;
-        }
-
-        .check_mark {
-            font-size: 21px;
-            line-height: 21px;
-            color: var(--color-primary);
-            text-shadow: 0 5px 4px #53DFCF22;
-        }
     }
 
     .start__background {
